<resources>
    <string name="app_name">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="english">English</string>
    <string name="celsius">Celsius</string>
    <string name="fehrenheit">Fehrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="meter_sec"> m/s</string>
    <string name="mile_hour"> mi/h</string>
    <string name="notification">Notification</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="hpa"> hpa</string>
    <string name="m"> m</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="home">Home</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="ok">OK</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="overlay_permission">Application overlay permission</string>
    <string name="overlay_message">Please allow Application overlay permission</string>
    <string name="permission_grant">Allow</string>
    <string name="check_connection">You are offline, Check your connection</string>
    <string name="weather">Weather</string>
    <string name="alerts">Alerts</string>
    <string name="fav_weather">Favorite Weather</string>




</resources>