<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/alertFragment"
        android:icon="@drawable/notification"
        android:title="@string/alert" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/favorite"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settingsone"
        android:title="@string/settings" />

</group>

</menu>