<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginTop="25dp"
    android:background="@drawable/rounded_bg"
    android:layout_marginEnd="10dp">

    <TextView
        android:id="@+id/set"
        android:textColor="@color/white"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/set_alarm"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_style"
        android:layout_width="140dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/from"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@id/set" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_style"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/to"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@id/guideline_right2"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_from"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/from_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="2:52 AM"
                android:textColor="#676666"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="26 Feb,2023"
                android:textColor="#8C8A8A"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_to"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_from"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/card_from"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/to_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="2:52 AM"
                android:textColor="#676666"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="26 Feb,2023"
                android:textColor="#8C8A8A"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/alert_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left2"
        app:layout_constraintEnd_toEndOf="@id/guideline_right2"
        app:layout_constraintTop_toBottomOf="@id/card_from">

        <RadioButton
            android:id="@+id/alarm_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:buttonTint="@color/yellow"
            android:checked="true"
            android:enabled="true"
            android:text="@string/alarm"

            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/notification_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/yellow"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_alert"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left2"
        app:layout_constraintTop_toBottomOf="@+id/alert_type_radio_group" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_alert"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel_alert"
        app:layout_constraintEnd_toEndOf="@id/guideline_right2"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel_alert" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>